fixed the spacing between lists

--- a/master.css
+++ b/master.css
@@ -14,6 +14,10 @@ body {
     color: var(--base-text);
 }
 
+.pad-b {
+    margin-bottom: 10px;
+}
+
 .border {
     border-bottom: 0.5rem dotted var(--accents-color);
 }
